# compression-utils

./: CMakeLists.txt  README.md  build.sh
algorithms/brotli/: CMakeLists.txt
algorithms/xz/: CMakeLists.txt
algorithms/zlib/: CMakeLists.txt
algorithms/zstd/: CMakeLists.txt
bindings/c/: CMakeLists.txt  compression_utils_c.cpp
bindings/c/tests/: CMakeLists.txt
src/: algorithms.hpp.in  compression_utils.hpp  compression_utils_func.cpp  compression_utils_func.hpp
src/algorithms/brotli/: brotli.cpp  brotli.hpp
src/algorithms/xz/: xz.cpp  xz.hpp
src/algorithms/zlib/: zlib.cpp  zlib.hpp
src/algorithms/zstd/: zstd.cpp  zstd.hpp
src/utils/: algorithms_router.hpp
tests/: CMakeLists.txt  helpers.hpp  test_compression_utils.cpp  test_compression_utils_func.cpp
